Fix side menu unwanted scrolling

--- a/content/styles/default.scss
+++ b/content/styles/default.scss
@@ -10,8 +10,9 @@
 @import 'layouts/contact';
 @import 'layouts/footer';
 @import 'layouts/header';
-@import 'layouts/responsive';
+@import 'layouts/navigation';
 @import 'layouts/search';
+@import 'layouts/utils';
 
 @import 'modules/article';
 @import 'modules/buttons';
