--- a/layouts/content.html
+++ b/layouts/content.html
@@ -2,8 +2,8 @@
 	<form class="l-search search-box nocontent" action="/search" method="get"
 	      itemscope itemtype="http://schema.org/SearchAction" itemprop="potentialAction">
 		<meta itemprop="target" content="http://help.avem.es/search?q={q}"/>
-		<input type="search" class="search-box__input" name="q" required
-		       placeholder="Lo que quieras buscar..." itemprop="query-input">
+		<input class="search-box__input" itemprop="query-input" type="search"
+		       name="q" placeholder="Lo que quieras buscar..." required>
 		<input type="submit" class="search-box__btn btn btn--primary" value="Buscar">
 	</form>
 
