Show query in search box

--- a/layouts/content.html
+++ b/layouts/content.html
@@ -3,6 +3,7 @@
 	      itemscope itemtype="http://schema.org/SearchAction" itemprop="potentialAction">
 		<meta itemprop="target" content="http://help.avem.es/search?q={q}"/>
 		<input class="search-box__input" itemprop="query-input" type="search"
+		       <%= defined?(search_query) && 'value="' + search_query + '"' %>
 		       name="q" placeholder="Lo que quieras buscar..." required>
 		<input type="submit" class="search-box__btn btn btn--primary" value="Buscar">
 	</form>
