--- a/content/styles/default.scss
+++ b/content/styles/default.scss
@@ -16,6 +16,7 @@
 
 @import 'modules/article';
 @import 'modules/buttons';
+@import 'modules/category';
 @import 'modules/cta';
 @import 'modules/footer';
 @import 'modules/header';
