--- a/layouts/default.html
+++ b/layouts/default.html
@@ -32,8 +32,9 @@
 			<a class="nav__link" href="http://avem.es">Inicio</a>
 			<a class="nav__link" href="http://avem.es/activities">Actividades</a>
 			<a class="nav__link" href="http://avem.es/exchanges">Intercambios</a>
-			<a class="nav__link" href="http://blog.avem.es">Blog</a>
 			<a class="nav__link" href="http://avem.es/about">Quiénes somos</a>
+			<a class="nav__link" href="http://help.avem.es">Ayuda</a>
+			<a class="nav__link" href="http://blog.avem.es">Blog</a>
 		</nav>
 
 		<div id="page-wrapper" class="l-body">
@@ -42,24 +43,15 @@
 					<i class="fa fa-bars fa-lg"></i>
 				</button>
 
-				<div class="header__logo"></div>
-				<div class="l-hide-small header__extra">
-					<a href="http://help.avem.es" id="help-btn" class="btn btn--mono">
-						<span class="fa-stack fa-md">
-							<i class="fa fa-circle fa-stack-2x"></i>
-							<i class="fa fa-question fa-inverse fa-stack-1x"></i>
-						</span>
-					</a>
-					<a id="login-btn" class="btn btn--extra" href="http://avem.es/login">Inicia sesión</a>
-				</div>
+				<a class="header__logo" href="http://help.avem.es"></a>
 			</header>
 
 			<nav class="l-hide-small l-nav nav nav--span nocontent">
 				<a class="nav__link" href="http://avem.es">Inicio</a>
 				<a class="nav__link" href="http://avem.es/activities">Actividades</a>
 				<a class="nav__link" href="http://avem.es/exchanges">Intercambios</a>
-				<a class="nav__link" href="http://blog.avem.es">Blog</a>
 				<a class="nav__link" href="http://avem.es/about">Quiénes somos</a>
+				<a class="nav__link" href="http://blog.avem.es">Blog</a>
 			</nav>
 
 			<main class="l-main">
