--- a/content/styles/modules/_index.scss
+++ b/content/styles/modules/_index.scss
@@ -1,5 +1,6 @@
 $index-article-color: #4c8ce6;
 $index-article-hover-bg: #e0ebfb;
+$index-article-active-bg: #a6c6f2;
 
 .index {
 	display: flex;
@@ -9,15 +10,15 @@ $index-article-hover-bg: #e0ebfb;
 
 	&__group {
 		box-sizing: border-box;
-		flex-basis: 50%;
 		padding: 5px;
 	}
 
 	&__link {
 		color: inherit;
 		cursor: pointer;
+		outline: 0;
+		-webkit-tap-highlight-color: rgba(#000, 0);
 		text-decoration: none;
-		white-space: nowrap;
 	}
 
 	&__category {
@@ -40,6 +41,10 @@ $index-article-hover-bg: #e0ebfb;
 
 		&:hover {
 			background-color: $index-article-hover-bg;
+		}
+
+		&:active {
+			background-color: $index-article-active-bg;
 		}
 	}
 }
