Implement contact page

--- a/content/styles/default.scss
+++ b/content/styles/default.scss
@@ -17,6 +17,7 @@
 @import 'modules/article';
 @import 'modules/buttons';
 @import 'modules/category';
+@import 'modules/contact-form';
 @import 'modules/cta';
 @import 'modules/footer';
 @import 'modules/header';
