Add content pages

--- a/content/styles/modules/_index.scss
+++ b/content/styles/modules/_index.scss
@@ -30,7 +30,7 @@ $index-rem-link-hover-color: #999;
 	}
 
 	&__articles {
-		list-style-type: none;
+		list-style: none;
 		margin: 0;
 		padding: 0;
 	}
