--- a/content/styles/modules/_article.scss
+++ b/content/styles/modules/_article.scss
@@ -22,6 +22,12 @@
 		font-size: 16px;
 		line-height: 1.4;
 
+		a {
+			&:hover {
+				text-decoration: underline;
+			}
+		}
+
 		h2 {
 			color: #000;
 			font-size: 24px;
