--- a/content/styles/modules/_contact-form.scss
+++ b/content/styles/modules/_contact-form.scss
@@ -39,11 +39,11 @@ $contact-form-textarea-height: 325px;
 
 	&__submit {
 		margin: 40px 0;
+		text-align: center;
 
 		input {
 			font-size: 16px;
 			font-weight: 600;
-			margin: 0 auto;
 			padding: 10px;
 		}
 	}
