Hide not yet working links

--- a/content/styles/base/_fonts.scss
+++ b/content/styles/base/_fonts.scss
@@ -11,7 +11,7 @@ html {
 	-webkit-font-smoothing: antialiased;
 }
 
-a, button, input, label, nav {
+header, a, button, input, label, nav {
 	font-family: $display-font;
 }
 
