--- a/layouts/default.html
+++ b/layouts/default.html
@@ -28,7 +28,7 @@
 	</head>
 
 	<body>
-		<nav id="side-nav" class="l-hide-desktop l-sidenav nav nav--stacked nocontent">
+		<nav id="side-nav" class="l-unreleased l-hide-desktop l-sidenav nav nav--stacked nocontent">
 			<a class="nav__link" href="http://avem.es">Inicio</a>
 			<a class="nav__link" href="http://avem.es/activities">Actividades</a>
 			<a class="nav__link" href="http://avem.es/exchanges">Intercambios</a>
@@ -39,14 +39,13 @@
 
 		<div id="page-wrapper" class="l-body">
 			<header class="l-header header nocontent">
-				<button id="menu-toggle" class="l-hide-desktop header__hamburger btn btn--fixed">
+				<button id="menu-toggle" class="l-unreleased l-hide-desktop header__hamburger btn btn--fixed">
 					<i class="fa fa-bars fa-lg"></i>
 				</button>
-
 				<a class="header__logo" href="http://help.avem.es"></a>
 			</header>
 
-			<nav class="l-hide-small l-nav nav nav--span nocontent">
+			<nav class="l-unreleased l-hide-small l-nav nav nav--span nocontent">
 				<a class="nav__link" href="http://avem.es">Inicio</a>
 				<a class="nav__link" href="http://avem.es/activities">Actividades</a>
 				<a class="nav__link" href="http://avem.es/exchanges">Intercambios</a>
