Use svg image as logo

--- a/content/styles/modules/_header.scss
+++ b/content/styles/modules/_header.scss
@@ -5,7 +5,7 @@ $header-logo-size-sm: 45px;
 	position: relative;
 
 	&__logo {
-		background-image: url('../images/avem-logo.png');
+		background-image: url('../images/avem-logo.svg');
 		background-size: cover;
 		display: block;
 		margin: 0 auto;
