Temporarily disable flexbox layout

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -50,7 +50,7 @@
 				<button id="menu-toggle" class="l-unreleased l-hide-desktop header__hamburger btn btn--fixed">
 					<i class="fa fa-bars fa-lg"></i>
 				</button>
-				<a class="header__logo" href="http://help.avem.es"></a>
+				<a class="header__logo" href="/"></a>
 			</header>
 
 			<nav class="l-unreleased l-hide-small l-nav nav nav--span nocontent">
